{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 141,
  "lineage": "af27446b-52f8-58c1-d2b5-7a94d8fe2b8e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0767179215f7f0f27",
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:elastic-ip/eipalloc-0767179215f7f0f27",
            "association_id": "eipassoc-0ba8db92bdb598caa",
            "domain": "vpc",
            "id": "eipalloc-0767179215f7f0f27",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-092373c20630a0dba",
            "private_dns": "ip-192-168-1-10.ap-southeast-1.compute.internal",
            "private_ip": "192.168.1.10",
            "public_dns": "ec2-13-251-218-228.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.218.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP"
            },
            "tags_all": {
              "Name": "Elastic IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend-ec2-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:instance/i-040d91a6eb4fbe3bd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040d91a6eb4fbe3bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e43e0a6f5b755d75",
            "private_dns": "ip-192-168-2-242.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03981ec86d96eab75",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af2db18d9769fb66",
            "tags": {
              "Name": "Back End EC2"
            },
            "tags_all": {
              "Name": "Back End EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057d913e42b403870"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.backend-sg",
            "aws_security_group.bastion-sg",
            "aws_security_group.frontend-sg",
            "aws_subnet.private-subnet-az1",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-jumpserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:instance/i-09badfdb17975e2aa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09badfdb17975e2aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5bc17d4fc7600db",
            "private_dns": "ip-192-168-5-28.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.5.28",
            "public_ip": "3.0.148.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0624661163e143f08",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0578b5f9896acc9d2",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02885e2a54c054ca5"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.bastion-sg",
            "aws_subnet.bastion-host",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fronted-ec2-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:instance/i-07d053e2344601351",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d053e2344601351",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d00b5a52195257e",
            "private_dns": "ip-192-168-1-191.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.191",
            "public_ip": "122.248.218.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f49891dd3562316",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c671bc50dad46f",
            "tags": {
              "Name": "Front End EC2"
            },
            "tags_all": {
              "Name": "Front End EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074ab54afd000877f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.bastion-sg",
            "aws_security_group.frontend-sg",
            "aws_subnet.public-subnet-az1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:instance/i-028b725a7e4900cf0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028b725a7e4900cf0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00ee23e07c892a7b2",
            "private_dns": "ip-192-168-3-106.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.106",
            "public_ip": "13.229.184.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c0bf048fbf869423",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006ebf42554219537",
            "tags": {
              "Name": "Front End EC2"
            },
            "tags_all": {
              "Name": "Front End EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074ab54afd000877f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.bastion-sg",
            "aws_security_group.frontend-sg",
            "aws_subnet.public-subnet-az1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:internet-gateway/igw-066abafead253589e",
            "id": "igw-066abafead253589e",
            "owner_id": "767397727677",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "tags_all": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "dependencies": [
            "aws_vpc.project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:loadbalancer/app/tf-lb-20250725173905399100000002/bc12ff3d26c519b8",
            "arn_suffix": "app/tf-lb-20250725173905399100000002/bc12ff3d26c519b8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20250725173905399100000002-1717716020.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:loadbalancer/app/tf-lb-20250725173905399100000002/bc12ff3d26c519b8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20250725173905399100000002",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f4d47759c0244e33"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-006ebf42554219537"
              },
              {
                "subnet_id": "subnet-036c671bc50dad46f"
              }
            ],
            "subnets": [
              "subnet-006ebf42554219537",
              "subnet-036c671bc50dad46f"
            ],
            "tags": {
              "Name": "Front-end ALB"
            },
            "tags_all": {
              "Name": "Front-end ALB"
            },
            "vpc_id": "vpc-0de525f3e8e5c38bb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public-subnet-az1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:listener/app/tf-lb-20250725173905399100000002/bc12ff3d26c519b8/421441ff504834d3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:targetgroup/tf-20250725172139736000000001/4d677de86ece72bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:listener/app/tf-lb-20250725173905399100000002/bc12ff3d26c519b8/421441ff504834d3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:loadbalancer/app/tf-lb-20250725173905399100000002/bc12ff3d26c519b8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frontend-alb",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public-subnet-az1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:targetgroup/tf-20250725172139736000000001/4d677de86ece72bf",
            "arn_suffix": "targetgroup/tf-20250725172139736000000001/4d677de86ece72bf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:targetgroup/tf-20250725172139736000000001/4d677de86ece72bf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:loadbalancer/app/tf-lb-20250725173905399100000002/bc12ff3d26c519b8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250725172139736000000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Front end Target Group"
            },
            "tags_all": {
              "Name": "Front end Target Group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "dependencies": [
            "aws_vpc.project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:targetgroup/tf-20250725172139736000000001/4d677de86ece72bf-20250725172141067000000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:targetgroup/tf-20250725172139736000000001/4d677de86ece72bf",
            "target_id": "i-07d053e2344601351"
          },
          "dependencies": [
            "aws_instance.fronted-ec2-az1",
            "aws_key_pair.ssh-key",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.bastion-sg",
            "aws_security_group.frontend-sg",
            "aws_subnet.public-subnet-az1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:targetgroup/tf-20250725172139736000000001/4d677de86ece72bf-20250725172141218800000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397727677:targetgroup/tf-20250725172139736000000001/4d677de86ece72bf",
            "target_id": "i-028b725a7e4900cf0"
          },
          "dependencies": [
            "aws_instance.fronted-ec2-az1",
            "aws_key_pair.ssh-key",
            "aws_lb_target_group.frontend-tg",
            "aws_security_group.bastion-sg",
            "aws_security_group.frontend-sg",
            "aws_subnet.public-subnet-az1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0767179215f7f0f27",
            "association_id": "eipassoc-0ba8db92bdb598caa",
            "connectivity_type": "public",
            "id": "nat-03b10f4878c473748",
            "network_interface_id": "eni-092373c20630a0dba",
            "private_ip": "192.168.1.10",
            "public_ip": "13.251.218.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036c671bc50dad46f",
            "tags": {
              "Name": "VPC NAT Gateway"
            },
            "tags_all": {
              "Name": "VPC NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:route-table/rtb-08ee5a711c3cdb359",
            "id": "rtb-08ee5a711c3cdb359",
            "owner_id": "767397727677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03b10f4878c473748",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.vpc-nat",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:route-table/rtb-030ba92514f27d2a9",
            "id": "rtb-030ba92514f27d2a9",
            "owner_id": "767397727677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066abafead253589e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-ig",
            "aws_vpc.project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac8e9abcb0626b85",
            "route_table_id": "rtb-030ba92514f27d2a9",
            "subnet_id": "subnet-036c671bc50dad46f"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-ig",
            "aws_route_table.public-rt-1",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecf6391048f472cf",
            "route_table_id": "rtb-030ba92514f27d2a9",
            "subnet_id": "subnet-006ebf42554219537"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-ig",
            "aws_route_table.public-rt-1",
            "aws_subnet.public-subnet-az2",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc-rt-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9b81d8f2e2220da",
            "route_table_id": "rtb-030ba92514f27d2a9",
            "subnet_id": "subnet-0578b5f9896acc9d2"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-ig",
            "aws_route_table.public-rt-1",
            "aws_subnet.bastion-host",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc96afee0034ecc2",
            "route_table_id": "rtb-08ee5a711c3cdb359",
            "subnet_id": "subnet-0af2db18d9769fb66"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.vpc-nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet-az1",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04df38c90580056c1",
            "route_table_id": "rtb-08ee5a711c3cdb359",
            "subnet_id": "subnet-020e7499653b7ab2b"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.vpc-nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet-az2",
            "aws_subnet.public-subnet-az1",
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:security-group/sg-0f4d47759c0244e33",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4d47759c0244e33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250725173902684000000001",
            "name_prefix": "terraform-",
            "owner_id": "767397727677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:security-group/sg-057d913e42b403870",
            "description": "Back-End Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057d913e42b403870",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02885e2a54c054ca5"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "nodejs port",
                "from_port": 300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074ab54afd000877f"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20250725160456720800000004",
            "name_prefix": "terraform-",
            "owner_id": "767397727677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.frontend-sg",
            "aws_vpc.project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:security-group/sg-02885e2a54c054ca5",
            "description": "jump server sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02885e2a54c054ca5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "124.104.46.231/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250725160452316600000001",
            "name_prefix": "terraform-",
            "owner_id": "767397727677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:security-group/sg-074ab54afd000877f",
            "description": "Front End Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074ab54afd000877f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02885e2a54c054ca5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250725160454070300000003",
            "name_prefix": "terraform-",
            "owner_id": "767397727677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.project-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:subnet/subnet-0578b5f9896acc9d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0578b5f9896acc9d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397727677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "dependencies": [
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:subnet/subnet-0af2db18d9769fb66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af2db18d9769fb66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397727677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App IP private-subnet"
            },
            "tags_all": {
              "Name": "App IP private-subnet"
            },
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "dependencies": [
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:subnet/subnet-020e7499653b7ab2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e7499653b7ab2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397727677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App IP private-subnet AZ2"
            },
            "tags_all": {
              "Name": "App IP private-subnet AZ2"
            },
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "dependencies": [
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:subnet/subnet-036c671bc50dad46f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036c671bc50dad46f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397727677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Front-web IP public subnet"
            },
            "tags_all": {
              "Name": "Front-web IP public subnet"
            },
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "dependencies": [
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:subnet/subnet-006ebf42554219537",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006ebf42554219537",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397727677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Front-web IP public subnet AZ2"
            },
            "tags_all": {
              "Name": "Front-web IP public subnet AZ2"
            },
            "vpc_id": "vpc-0de525f3e8e5c38bb"
          },
          "dependencies": [
            "aws_vpc.project-VPC",
            "data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397727677:vpc/vpc-0de525f3e8e5c38bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0685a265116238b8c",
            "default_route_table_id": "rtb-0432b219a7b1c603b",
            "default_security_group_id": "sg-07e0599299fc215bf",
            "dhcp_options_id": "dopt-0aa2503d6fe139e36",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de525f3e8e5c38bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0432b219a7b1c603b",
            "owner_id": "767397727677",
            "tags": {
              "Name": "Web Tier VPC"
            },
            "tags_all": {
              "Name": "Web Tier VPC"
            }
          }
        }
      ]
    }
  ]
}